Fix Z-Index issues in designer

--- a/assets/less/blu/blu-bordered-header.less
+++ b/assets/less/blu/blu-bordered-header.less
@@ -14,7 +14,7 @@
   font-weight: bold;
   text-transform: uppercase;
 
-  z-index: 2;
+  z-index: 1;
 }
 
 .blu-bordered-header-divider {
@@ -24,5 +24,4 @@
 
   margin: 0;
   width: 100%;
-  z-index: 1;
 }
