--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -147,7 +147,7 @@ body {
 }
 
 #intercom-container {
-  z-index: 1;
+  z-index: 2;
   position: relative;
 }
 
